pango-layout: Add a clarifying assertion

In pango_layout_index_to_pos(), it looks like layout_line could be
dereferenced while still NULL in the first loop iteration. This is not
the case, as other bits of PangoLayout ensure its start_index is always
0, so this branch is never taken. Add an assertion to clarify that and
guide static analysis.

Coverity ID: 1391700

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=778656